# converseek

./: README.md  SKILL.md  pyproject.toml
src/converseek/: __init__.py  __main__.py  base.py
src/converseek/adapters/: antigravity.py  claude_code.py  cursor.py  hermes.py  opencode.py  paseo.py  qwenpaw.py  zcode.py
src/session_search/: __main__.py
src/session_search/adapters/: antigravity.py
