[project]
name = "converseek"
version = "0.2.0"
description = "Cross-tool session search, browse, and export for AI coding tools (Claude Code, Cursor, Antigravity, OpenCode, ZCode, Paseo, Hermes)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
converseek = "converseek.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/converseek"]
